# power-outage-agent

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260514_0001_initial.py  20260514_0002_observability_matcher.py
app/: config.py  main.py
app/alerts/: __init__.py  telegram.py
app/api/: __init__.py  app.py  deps.py  queries.py  schemas.py
app/db/: engine.py  models.py  repositories.py
app/matching/: __init__.py  defaults.py  office_matcher.py
app/models/: schemas.py
app/normalization/: address.py  automaton.py  base.py  demo.py  gigachat_client.py  llm.py
app/parsers/: base.py  demo_collectors.py  eseti.py  html_collector.py  json_collector.py  rosseti_sib.py  rosseti_tomsk.py
docs/: arch.md  commands.md  doc.md  spec.md
tests/: conftest.py  test_address.py  test_automaton.py  test_collector.py  test_deduplicator.py  test_dispatcher.py  test_gigachat.py  test_map_api.py  test_matcher_worker.py  test_metrics.py  test_normalized_dedup.py  test_normalizer.py  test_notifier.py  test_office_import_api.py  test_office_matcher.py  test_parser.py  test_parser_eseti.py  test_parser_health.py  test_parser_tomsk.py  test_quality_evaluation.py  test_queue.py  test_request_watcher.py  test_scheduler.py  test_telegram_alert.py
tools/: collect_sber_sfo_offices.mjs
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.mjs  vite.config.ts
(+76 files in other folders)
