[project]
name = "power-outage-agent"
version = "0.1.0"
description = "Agent that collects planned power outage announcements and matches them with company offices."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "aiosqlite>=0.20",  # in-memory async DB for ORM integration tests
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=5.9",  # admin API memory snapshot on /api/metrics/pipeline
]

[build-system]
requires = ["setuptools>=68", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
